--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /c270
 /google
 /rally_cam
+/host/host_relusts
 build
 /v4l2-examples-master/example-1/example-1
 /v4l2-examples-master/example-2/example-2
