--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /c270
 /google
 /rally_cam
-/host/host_relusts
+results
+host_results
 build
 /v4l2-examples-master/example-1/example-1
 /v4l2-examples-master/example-2/example-2
